ajuste para que el username sea el correo

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ DB_USER=root
 DB_PASSWORD=
 DB_PORT=3306
 DB_HOST=localhost
-DB_DATABASE=miniproyecto_m4
+DB_DATABASE=modulo4
 SECRET_KEY=qweasd123
 SERVER_HOST = http://localhost:3000
